cluster/apps/infrastructure/ldap-user-manager/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-user-manager
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
