cluster/apps/infrastructure/ldap-user-manager/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-user-manager
  namespace: ldap-user-manager
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ldap-user-manager
  template:
    metadata:
      labels:
        app: ldap-user-manager
    spec:
      containers:
        - name: ldap-user-manager
          image: wheelybird/ldap-user-manager:v1.8
          resources:
            limits:
              memory: 2Gi
              cpu: 1500m
            requests:
              memory: 250Mi
              cpu: 50m
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
      ingress:
        main:
          enabled: true
          ingressClassName: "nginx"
          annotations:
            cert-manager.io/cluster-issuer: "letsencrypt-production"
          ports:
            http:
              port: 80
          hosts:
            - host: &host "ldap-user-manager.${SECRET_DOMAIN}"
              paths:
                - path: /
                  pathType: Prefix
          tls:
            - hosts:
                - *host
              secretName: "ldap-user-manager-cert"
