cluster/apps/infrastructure/ldap-user-manager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ldap-user-manager
  namespace: ldap-user-manager
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
