cluster/apps/infrastructure/ldap-user-manager/ingress.yaml
---
# All this does is  grab a certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap-user-manager
  namespace: ldap-user-manager
  ingressClassName: "nginx"
  annotations:
    kubernetes.io/ingress.class: internal
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: &host ldap-user-manager.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: ldap-user-manager
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: ldap-user-manager-cert
